--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.28.6",
+    "axios": "^1.6.8",
     "firebase": "^10.9.0",
     "helmet": "^7.1.0",
     "localforage": "^1.10.0",
@@ -18,6 +20,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.4",
+    "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.3",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.10.6"
